--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -21,14 +21,17 @@ body {
   vertical-align: middle;
 }
 
-.container-fluid {
-    padding: 40px 40px 40px 40px;
-    max-width: 960px;
+.schedule {
+  text-align: center;
+  vertical-align: middle;
+  margin: auto;
+  padding: 40px 40px 40px 40px;
+  max-width: 960px;
 }
 
-.container-fluid h6 {
-    font-size: 1.5em;
-    max-width: 960px;
+.schedule h6 {
+  font-size: 1.5em;
+  max-width: 960px;
 }
 
 .text-vertical-center h1 {
